--- a/index.html
+++ b/index.html
@@ -123,6 +123,7 @@
 									<p class="meta">2021 - 2024, Provence-Alpes-Côte d’Azur-France</p>
 									<p class="meta" style="color: gray;"><strong>Philosophiæ Doctor(PhD) Degree</strong> in Engineering Sciences (Computer Science, Telecommunications & Electronics)</p>
 										<p class="meta">Ph.D. Thesis: <em>Ph.D. Thesis Subject: Enhanced Receiver Design for Ultra-Reliable Low-Latency Short Data Communications</em>. </p>
+										<label><i class="bi-file-pdf-fill" style="color: darkgray"></i></label> <span><a href="https://hal.sorbonne-universite.fr/tel-05393762v1/document" style="color: darkgray">Ph Thesis PDF (click to <i class="bi-arrow-down-square-fill"></i>)</a></span>
 								</div>
 								<hr />
 								<div class="univ">
@@ -282,21 +283,28 @@
 									<h3>Publications </h3>
 									<!--i class="fas fa-gem fa-7x  " style="color: #7999cd"></i-->
 									 <p class="meta"> I actively contribute to advancing research in 5G/6G wireless communications, channel coding, and physical layer design.	</p>
-									<p class="meta"><a href="#" style="color: black">[8]&nbsp</a> <b>Mody Sy</b>, "<em>LLR-based attention-weighted projection decoding for sparse vector coded short-packet transmissions</em>", submitted to IEEE Transactions on Communications, preprint can be found on  <cite><a href="" style="color: darkgray">ArXiv</a>,</cite> October 19, 2025. <br />
+									<p class="meta"><a href="#" style="color: black">[9]&nbsp</a> <b>Mody Sy</b>, "<em>LLR-based attention-weighted projection decoding for sparse vector coded short-packet transmissions</em>", submitted to IEEE Transactions on Communications, preprint can be found on  <cite><a href="" style="color: darkgray">ArXiv</a>,</cite> October 19, 2025. <br />
 										<cite><span class="bi-file-text-fill"><a href="#" style="color: darkgray">Detail</a></span></cite>&nbsp&nbsp
 										<cite><span class="bi-file-pdf-fill"><a href="#" style="color: darkgray">PDF</a></span></cite>&nbsp&nbsp
 
-									<p class="meta"><a href="#" style="color: black">[7]&nbsp</a> <b>Mody Sy</b>, "<em>Demystifying 5G Polar and LDPC Codes: A Comprehensive Review and Foundations</em>", preprint can be found on  <cite><a href="https://doi.org/10.48550/arXiv.2502.11053" style="color: darkgray">ArXiv</a>,</cite> February 15, 2025. <br />
+									<p class="meta"><a href="#" style="color: black">[8]&nbsp</a> <b>Mody Sy</b>, "<em>Demystifying 5G Polar and LDPC Codes: A Comprehensive Review and Foundations</em>", preprint can be found on  <cite><a href="https://doi.org/10.48550/arXiv.2502.11053" style="color: darkgray">ArXiv</a>,</cite> February 15, 2025. <br />
 										<cite><span class="bi-file-text-fill"><a href="https://doi.org/10.48550/arXiv.2502.11053" style="color: darkgray">Detail</a></span></cite>&nbsp&nbsp
 										<cite><span class="bi-file-pdf-fill"><a href="https://doi.org/10.48550/arXiv.2502.11053" style="color: darkgray">PDF</a></span></cite>&nbsp&nbsp
 
-									<p class="meta"><a href="#" style="color: black">[6]&nbsp</a> <b>Mody Sy</b> and Raymond Knopp, "<em>Enhanced BICM Receivers for Ultra-Reliable
+									<p class="meta"><a href="#" style="color: black">[7]&nbsp</a> <b>Mody Sy</b> and Raymond Knopp, "<em>Enhanced BICM Receivers for Ultra-Reliable
 										Low-Latency Short Packet Communications</em>", submitted to IEEE Transactions on Wireless Communications, preprint can be found on  <cite><a href="https://doi.org/10.48550/arXiv.2408.08660" style="color: darkgray">ArXiv</a>,</cite> October 07, 2025. <br />
 										<cite><span class="bi-file-text-fill"><a href="https://doi.org/10.48550/arXiv.2408.08660" style="color: darkgray">Detail</a></span></cite>&nbsp&nbsp
 										<cite><span class="bi-file-pdf-fill"><a href="https://doi.org/10.48550/arXiv.2408.08660" style="color: darkgray">PDF</a></span></cite>&nbsp&nbsp
-									<p class="meta"><a href="#" style="color: black">[5]&nbsp</a> <b>Mody Sy</b> and Raymond Knopp, "<em>Receiver Metric Design for Short-Block Channels : A Perspective for Reliable 6G Signalling Scenarios</em>", 2024 European Conference on Networks and Communications & 6G Summit (EuCNC & 6G Summit), Antwerp, Belgium, June 3–6, 2024. <br />
-										<cite><span class="bi-file-text-fill"><a href="./papers_detail/iccc2023/p5.html" style="color: darkgray">Detail</a></span></cite>&nbsp&nbsp
-										<cite><span class="bi-file-pdf-fill"><a href="https://ieeexplore.ieee.org/document/10597121" style="color: darkgray">PDF</a></span></cite>&nbsp&nbsp
+
+										<p class="meta"><a href="#" style="color: black">[6]&nbsp</a> <b>Mody Sy</b> and Raymond Knopp, "<em>Receiver Metric Design for Short-Block Channels : A Perspective for Reliable 6G Signalling Scenarios</em>", 2024 European Conference on Networks and Communications & 6G Summit (EuCNC & 6G Summit), Antwerp, Belgium, June 3–6, 2024. <br />
+											<cite><span class="bi-file-text-fill"><a href="#" style="color: darkgray">Detail</a></span></cite>&nbsp&nbsp
+											<cite><span class="bi-file-pdf-fill"><a href="https://ieeexplore.ieee.org/document/10597121" style="color: darkgray">PDF</a></span></cite>&nbsp&nbsp
+
+
+									<p class="meta"><a href="#" style="color: black">[5]&nbsp</a> <b>Mody Sy(PhD Thesis. 2024)</b> , "<em>Enhanced receiver design for ultra-reliable low-latency short data communications</em>", PhD Dissertation from Sorbonne University in partial fulfillment of the requirements for the degree of Ph.D. in Engineering Sciences (Computer Science, Telecommunications, and Electronics) <br />
+										<cite><span class="bi-file-text-fill"><a href="https://hal.sorbonne-universite.fr/tel-05393762v1" style="color: darkgray">Detail</a></span></cite>&nbsp&nbsp
+										<cite><span class="bi-file-pdf-fill"><a href="https://hal.sorbonne-universite.fr/tel-05393762v1/document" style="color: darkgray">PDF</a></span></cite>&nbsp&nbsp
+
 									<p class="meta"><a href="#" style="color: black">[4]&nbsp</a> <b>Mody Sy</b> and Raymond Knopp, "<em>Novel Joint Estimation and Decoding Metrics for Short-Blocklength Transmission Systems</em>", 2023 IEEE Conference on Standards for Communications and Networking (CSCN), Munich, Germany, Nov 6–8, 2023. <br />
 										<cite><span class="bi-file-text-fill"><a href="./papers_detail/iccc2023/p4.html" style="color: darkgray">Detail</a></span></cite>&nbsp&nbsp
 										<cite><span class="bi-file-pdf-fill"><a href="https://doi.org/10.48550/arXiv.2404.09943" style="color: darkgray">PDF</a></span></cite>&nbsp&nbsp
@@ -322,6 +330,8 @@
 										<!--cite><span class="bi-bookmarks-fill"><a href="./papers_detail/iccc2023/p1.tex" style="color: darkgray">BibTex</a></span></cite-->
 									</p> <!--https://drive.google.com/file/d/1vWiB8lRy_nm8k65szvOnwlnwsVco7XZd/view?usp=share_link->
 
+
+<label><i class="bi-person-lines-fill" style="color: darkgray"></i></label> <span><a href="https://drive.google.com/file/d/10MQxMS_30InWlFrTuADiWY7y4rKOByjO/view?usp=share_link" style="color: darkgray">CV (click to <i class="bi-arrow-down-square-fill"></i>)</a></span>
 
 
 									<!--p class="meta"><a href="https://drive.google.com/file/d/1ZxNPnQEIoNkxO-HHwMSA7efTvZ_fCt2E/view?usp=sharing">[2] </a> Monitoring VMs in a Proxmox VE cluster with Centreon Enterprise Server.</p-->
@@ -369,7 +379,7 @@
 										<div class="clearfix"></div> <hr />
 										<label><i class="bi-house-fill" style="color: black"></i></label> <span> Campus SophiaTech, <br />06410 Biot, France</span>
 										<div class="clearfix"></div> <hr />
-										<label><i class="bi-person-lines-fill" style="color: darkgray"></i></label> <span><a href="https://drive.google.com/file/d/1x6Hz9iwnlltvoK3OzSutssz5hPpGQDJC/view?usp=share_link" style="color: darkgray">CV (click to <i class="bi-arrow-down-square-fill"></i>)</a></span>
+										<label><i class="bi-person-lines-fill" style="color: darkgray"></i></label> <span><a href="https://drive.google.com/file/d/10MQxMS_30InWlFrTuADiWY7y4rKOByjO/view?usp=share_link" style="color: darkgray">CV (click to <i class="bi-arrow-down-square-fill"></i>)</a></span>
 										<div class="clearfix"></div>
 									</div>
 								</div>
