--- a/index.html
+++ b/index.html
@@ -122,8 +122,8 @@
 									<h3> Sorbonne Université / EURECOM - Communication Systems Department</h3>
 									<p class="meta">2021 - 2024, Provence-Alpes-Côte d’Azur-France</p>
 									<p class="meta" style="color: gray;"><strong>Philosophiæ Doctor(PhD) Degree</strong> in Engineering Sciences (Computer Science, Telecommunications & Electronics)</p>
-										<p class="meta">Ph.D. Thesis: <em>Ph.D. Thesis Subject: Enhanced Receiver Design for Ultra-Reliable Low-Latency Short Data Communications</em>. </p>
-										<label><i class="bi-file-pdf-fill" style="color: darkgray"></i></label> <span><a href="https://hal.sorbonne-universite.fr/tel-05393762v1/document" style="color: darkgray">Ph Thesis PDF (click to <i class="bi-arrow-down-square-fill"></i>)</a></span>
+									<p class="meta">Ph.D. Thesis: <em>Ph.D. Thesis Subject: Enhanced Receiver Design for Ultra-Reliable Low-Latency Short Data Communications</em>. </p>
+									<p><label><i class="bi-file-pdf-fill" style="color: darkgray"></i> <a href="https://hal.sorbonne-universite.fr/tel-05393762v1/document" style="color: darkgray">Ph Thesis PDF (click to <i class="bi-arrow-down-square-fill"></i>)</a></label></p>
 								</div>
 								<hr />
 								<div class="univ">
