--- a/index.html
+++ b/index.html
@@ -301,7 +301,7 @@
 											<cite><span class="bi-file-pdf-fill"><a href="https://ieeexplore.ieee.org/document/10597121" style="color: darkgray">PDF</a></span></cite>&nbsp&nbsp
 
 
-									<p class="meta"><a href="#" style="color: black">[5]&nbsp</a> <b>Mody Sy(PhD Thesis. 2024)</b> , "<em>Enhanced receiver design for ultra-reliable low-latency short data communications</em>", PhD Dissertation from Sorbonne University in partial fulfillment of the requirements for the degree of Ph.D. in Engineering Sciences (Computer Science, Telecommunications, and Electronics) <br />
+									<p class="meta"><a href="#" style="color: black">[5]&nbsp</a> <b>Mody Sy(PhD Thesis. 2024)</b> , "<em>Enhanced receiver design for ultra-reliable low-latency short data communications</em>", PhD Dissertation from Sorbonne University in partial fulfillment of the requirements for the degree of Ph.D. in Engineering Sciences (Computer Science, Telecommunications, and Electronics),October 24th, 2024,  EURECOM, EDITE ED130, Sorbonne university, Paris, France.  <br />
 										<cite><span class="bi-file-text-fill"><a href="https://hal.sorbonne-universite.fr/tel-05393762v1" style="color: darkgray">Detail</a></span></cite>&nbsp&nbsp
 										<cite><span class="bi-file-pdf-fill"><a href="https://hal.sorbonne-universite.fr/tel-05393762v1/document" style="color: darkgray">PDF</a></span></cite>&nbsp&nbsp
 
