--- a/index.html
+++ b/index.html
@@ -283,14 +283,14 @@
 									<h3>Publications </h3>
 									<!--i class="fas fa-gem fa-7x  " style="color: #7999cd"></i-->
 									 <p class="meta"> I actively contribute to advancing research in 5G/6G wireless communications, channel coding, and physical layer design.	</p>
-									 <p class="meta"><a href="#" style="color: black">[10]&nbsp</a> <b>Mody Sy</b>, "<em>LLR-based attention-weighted projection decoding for sparse vector coded short-packet transmissions</em>", IEEE International Conference on Communications (IEEE ICC 2026), Wireless Communications Symposiumn, Glasgow, Scotland, UK 24–28 May 2026.  <br />
+									 <p class="meta"><a href="#" style="color: black">[9]&nbsp</a> <b>Mody Sy</b>, "<em>LLR-based attention-weighted projection decoding for sparse vector coded short-packet transmissions</em>", IEEE International Conference on Communications (IEEE ICC 2026), Wireless Communications Symposiumn, Glasgow, Scotland, UK 24–28 May 2026.  <br />
 										 <cite><span class="bi-file-text-fill"><a href="#" style="color: darkgray">Detail</a></span></cite>&nbsp&nbsp
 				 						<cite><span class="bi-file-pdf-fill"><a href="#" style="color: darkgray">PDF</a></span></cite>&nbsp&nbsp
 
 
-									<p class="meta"><a href="#" style="color: black">[9]&nbsp</a> <b>Mody Sy</b>, "<em>LLR-based attention-weighted projection decoding for sparse vector coded short-packet transmissions</em>", submitted to IEEE Transactions on Communications, preprint can be found on  <cite><a href="" style="color: darkgray">ArXiv</a>,</cite> October 19, 2025. <br />
+									<!--p class="meta"><a href="#" style="color: black">[9]&nbsp</a> <b>Mody Sy</b>, "<em>LLR-based attention-weighted projection decoding for sparse vector coded short-packet transmissions</em>", submitted to IEEE Transactions on Communications, preprint can be found on  <cite><a href="" style="color: darkgray">ArXiv</a>,</cite> October 19, 2025. <br />
 										<cite><span class="bi-file-text-fill"><a href="#" style="color: darkgray">Detail</a></span></cite>&nbsp&nbsp
-										<cite><span class="bi-file-pdf-fill"><a href="#" style="color: darkgray">PDF</a></span></cite>&nbsp&nbsp
+										<cite><span class="bi-file-pdf-fill"><a href="#" style="color: darkgray">PDF</a></span></cite>&nbsp&nbsp-->
 
 									<p class="meta"><a href="#" style="color: black">[8]&nbsp</a> <b>Mody Sy</b>, "<em>Demystifying 5G Polar and LDPC Codes: A Comprehensive Review and Foundations</em>", preprint can be found on  <cite><a href="https://doi.org/10.48550/arXiv.2502.11053" style="color: darkgray">ArXiv</a>,</cite> February 15, 2025. <br />
 										<cite><span class="bi-file-text-fill"><a href="https://doi.org/10.48550/arXiv.2502.11053" style="color: darkgray">Detail</a></span></cite>&nbsp&nbsp
